// Tests for editFile tool
// generated by polka.codes

import { describe, expect, it } from 'bun:test'
import { handler, isAvailable, toolInfo } from './editFile'
import type { FilesystemProvider } from './provider'

describe('editFile tool', () => {
  describe('toolInfo', () => {
    it('should have correct tool definition', () => {
      expect(toolInfo).toMatchSnapshot()
    })
  })

  describe('isAvailable', () => {
    it('should return true when provider has readFile and writeFile', () => {
      const provider: FilesystemProvider = {
        readFile: async () => 'content',
        writeFile: async () => {},
      }
      expect(isAvailable(provider)).toBe(true)
    })

    it('should return false when provider lacks readFile', () => {
      const provider: FilesystemProvider = {
        writeFile: async () => {},
      }
      expect(isAvailable(provider)).toBe(false)
    })

    it('should return false when provider lacks writeFile', () => {
      const provider: FilesystemProvider = {
        readFile: async () => 'content',
      }
      expect(isAvailable(provider)).toBe(false)
    })
  })

  describe('handler', () => {
    const createProvider = (fileContent: string | undefined = 'test content'): FilesystemProvider => ({
      readFile: async () => fileContent,
      writeFile: async () => {},
    })

    it('should return error when provider lacks capabilities', async () => {
      const provider: FilesystemProvider = {}
      const args = { path: 'test.txt', operations: [{ new_text: 'new' }] }

      const result = await handler(provider, args)

      expect(result).toMatchSnapshot()
    })

    it('should return error when file not found', async () => {
      const provider = createProvider()
      const args = { path: 'missing.txt', operations: [{ new_text: 'new' }] }

      const result = await handler(provider, args)

      expect(result).toMatchSnapshot()
    })

    it('should return error when no operations provided', async () => {
      const provider = createProvider('content')
      const args = { path: 'test.txt', operations: [] }

      const result = await handler(provider, args)

      expect(result).toMatchSnapshot()
    })

    it('should handle single operation successfully', async () => {
      let writtenContent = ''
      const provider: FilesystemProvider = {
        readFile: async () => 'Hello world',
        writeFile: async (path, content) => {
          writtenContent = content
        },
      }
      const args = {
        path: 'test.txt',
        operations: {
          start_anchor: 'Hello',
          end_anchor: 'world',
          new_text: ' beautiful ',
        },
      }

      const result = await handler(provider, args)

      expect(result).toMatchSnapshot()
      expect(writtenContent).toBe('Hello beautiful world')
    })

    it('should handle multiple operations successfully', async () => {
      let writtenContent = ''
      const provider: FilesystemProvider = {
        readFile: async () => 'function test() {\n  return 42;\n}',
        writeFile: async (path, content) => {
          writtenContent = content
        },
      }
      const args = {
        path: 'test.ts',
        operations: [
          {
            start_anchor: 'function test() {',
            end_anchor: '\n  return 42;',
            new_text: '\n  console.log("debug");',
          },
          {
            start_anchor: 'return 42;',
            end_anchor: '\n}',
            new_text: '\n\n',
          },
        ],
      }

      const result = await handler(provider, args)

      expect(result).toMatchSnapshot()
      expect(writtenContent).toBe('function test() {\n  console.log("debug");\n  return 42;\n\n\n}')
    })

    it('should handle start of file marker', async () => {
      let writtenContent = ''
      const provider: FilesystemProvider = {
        readFile: async () => 'export const value = 42;',
        writeFile: async (path, content) => {
          writtenContent = content
        },
      }
      const args = {
        path: 'test.ts',
        operations: {
          start_anchor: '<<<START_OF_FILE>>>',
          end_anchor: 'export',
          new_text: '// Header comment\n',
        },
      }

      const result = await handler(provider, args)

      expect(result).toMatchSnapshot()
      expect(writtenContent).toBe('// Header comment\nexport const value = 42;')
    })

    it('should handle end of file marker', async () => {
      let writtenContent = ''
      const provider: FilesystemProvider = {
        readFile: async () => 'export const value = 42;',
        writeFile: async (path, content) => {
          writtenContent = content
        },
      }
      const args = {
        path: 'test.ts',
        operations: {
          start_anchor: 'value = 42;',
          end_anchor: '<<<END_OF_FILE>>>',
          new_text: '\n// Footer comment',
        },
      }

      const result = await handler(provider, args)

      expect(result).toMatchSnapshot()
      expect(writtenContent).toBe('export const value = 42;\n// Footer comment')
    })

    it('should handle entire file replacement', async () => {
      let writtenContent = ''
      const provider: FilesystemProvider = {
        readFile: async () => 'old content',
        writeFile: async (path, content) => {
          writtenContent = content
        },
      }
      const args = {
        path: 'test.txt',
        operations: {
          start_anchor: '<<<START_OF_FILE>>>',
          end_anchor: '<<<END_OF_FILE>>>',
          new_text: 'completely new content',
        },
      }

      const result = await handler(provider, args)

      expect(result).toMatchSnapshot()
      expect(writtenContent).toBe('completely new content')
    })

    it('should return error when text not found', async () => {
      const provider = createProvider('Hello world')
      const args = {
        path: 'test.txt',
        operations: {
          start_anchor: 'missing',
          end_anchor: 'text',
          new_text: 'replacement',
        },
      }

      const result = await handler(provider, args)

      expect(result).toMatchSnapshot()
    })

    it('should handle insert after start_anchor only', async () => {
      let writtenContent = ''
      const provider: FilesystemProvider = {
        readFile: async () => 'Hello world',
        writeFile: async (path, content) => {
          writtenContent = content
        },
      }
      const args = {
        path: 'test.txt',
        operations: {
          start_anchor: 'Hello',
          new_text: ' beautiful',
        },
      }

      const result = await handler(provider, args)

      expect(result).toMatchSnapshot()
      expect(writtenContent).toBe('Hello beautiful world')
    })

    it('should handle insert before end_anchor only', async () => {
      let writtenContent = ''
      const provider: FilesystemProvider = {
        readFile: async () => 'Hello world',
        writeFile: async (path, content) => {
          writtenContent = content
        },
      }
      const args = {
        path: 'test.txt',
        operations: {
          end_anchor: 'world',
          new_text: 'beautiful ',
        },
      }

      const result = await handler(provider, args)

      expect(result).toMatchSnapshot()
      expect(writtenContent).toBe('Hello beautiful world')
    })
  })
})
